Prevent app banners from displaying after desktop add to shelf.

This CL records an app banner "added to homescreen" event when a user
manually adds a bookmark app to their desktop or shelf (via the overflow
menu). This ensures that if the added site is a progressive web app, it
will not be permitted to show an app banner if the user has manually
installed it.

This behaviour mirrors that on Android, which already records the "added
to homescreen" event on launch and when the user manually adds a site to
their homescreen.

BUG=674227

Review-Url: https://codereview.chromium.org/2612493002
Cr-Commit-Position: refs/heads/master@{#441085}

Former-commit-id: e75fa3a99a360d6469ac93a442b3f06bddf57253